添加 listview 右键菜单功能

--- a/HakeQuick/HakeQuick.csproj
+++ b/HakeQuick/HakeQuick.csproj
@@ -88,6 +88,10 @@
     <Reference Include="Hake.Extension.ValueRecord, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Hake.Extension.ValueRecord.1.0.0\lib\net452\Hake.Extension.ValueRecord.dll</HintPath>
     </Reference>
+    <Reference Include="Interop.Shell32">
+      <HintPath>..\Plugins\RunnerPlugin\obj\x64\Debug\Interop.Shell32.dll</HintPath>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="Microsoft.WindowsAPICodePack, Version=1.1.5.0, Culture=neutral, PublicKeyToken=8985beaab7ea3f04, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft-WindowsAPICodePack-Core.1.1.5\lib\net48\Microsoft.WindowsAPICodePack.dll</HintPath>
     </Reference>
@@ -119,6 +123,7 @@
     </Compile>
     <Compile Include="Helpers\GlassHelper.cs" />
     <Compile Include="Helpers\ScreenHelpers.cs" />
+    <Compile Include="Helpers\ContextMenuUtil.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
