添加更多托盘右键菜单功能

--- a/Framework/BaseImplement/BaseImplement.csproj
+++ b/Framework/BaseImplement/BaseImplement.csproj
@@ -146,5 +146,8 @@
   <ItemGroup>
     <EmbeddedResource Include="Resources\run.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Helpers\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
