--- a/HakeQuick/HakeQuick.csproj
+++ b/HakeQuick/HakeQuick.csproj
@@ -165,6 +165,10 @@
       <Project>{00835387-4f09-43b9-bfe0-68823a15f29b}</Project>
       <Name>BaseImplement</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Helpers\Helpers.csproj">
+      <Project>{a763570a-c121-4b9e-b240-490300a03244}</Project>
+      <Name>Helpers</Name>
+    </ProjectReference>
     <!-- <ProjectReference Include="..\Services\Chrome.BookmarkSearch\Chrome.BookmarkSearch.csproj"> -->
     <!-- <Project>{b386fbee-8ace-4e0d-9df2-42dee50292fe}</Project> -->
     <!-- <Name>Chrome.BookmarkSearch</Name> -->
