--- a/Helpers/Helpers.csproj
+++ b/Helpers/Helpers.csproj
@@ -82,6 +82,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Tools.cs" />
     <Compile Include="AssemblyResourceHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ValueRecordHelper.cs" />
