去掉启动通知，异步加载图标，多线程加载列表

--- a/Plugins/RunnerPlugin/RunnerPlugin.csproj
+++ b/Plugins/RunnerPlugin/RunnerPlugin.csproj
@@ -102,6 +102,7 @@
   <ItemGroup>
     <Compile Include="CommandData.cs" />
     <Compile Include="FileIconHelper.cs" />
+    <Compile Include="Tick.cs" />
     <Compile Include="UwpUtil.cs" />
     <Compile Include="SystemIcon.cs" />
     <Compile Include="PinyinHelper.cs" />
