添加设置框架
来源：https://github.com/BerndNK/ReflectSettings

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ TestResults/
 
 SettingsApp/Properties/Resources.Designer.cs
 SettingsApp/Properties/Settings.Designer.cs
+SettingsUI/Properties/Resources.Designer.cs
+SettingsUI/Properties/Settings.Designer.cs
