解决异步更新图标，集合访问问题

--- a/Plugins/RunnerPlugin/RunnerPlugin.csproj
+++ b/Plugins/RunnerPlugin/RunnerPlugin.csproj
@@ -88,6 +88,9 @@
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.ValueTuple, Version=4.0.1.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\System.ValueTuple.4.3.0\lib\netstandard1.0\System.ValueTuple.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
@@ -102,6 +105,7 @@
   <ItemGroup>
     <Compile Include="CommandData.cs" />
     <Compile Include="FileIconHelper.cs" />
+    <Compile Include="TaskManager.cs" />
     <Compile Include="Tick.cs" />
     <Compile Include="UwpUtil.cs" />
     <Compile Include="SystemIcon.cs" />
