--- a/Plugins/RunnerPlugin/packages.config
+++ b/Plugins/RunnerPlugin/packages.config
@@ -3,4 +3,5 @@
   <package id="Hake.Extension.ValueRecord" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft-WindowsAPICodePack-Core" version="1.1.3.3" targetFramework="net452" />
   <package id="Microsoft-WindowsAPICodePack-Shell" version="1.1.3.3" targetFramework="net452" />
+  <package id="System.ValueTuple" version="4.3.0" targetFramework="net452" />
 </packages>
