--- a/Settings/Settings.csproj
+++ b/Settings/Settings.csproj
@@ -34,6 +34,7 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -77,7 +78,7 @@
     <Compile Include="EditableConfigs\EditableDummy.cs" />
     <Compile Include="EditableConfigs\EditableEnum.cs" />
     <Compile Include="EditableConfigs\EditableInt.cs" />
-    <Compile Include="EditableConfigs\EditableJustButton.cs" />
+    <Compile Include="EditableConfigs\OtherConfigs.cs" />
     <Compile Include="EditableConfigs\EditableKeyValuePair.cs" />
     <Compile Include="EditableConfigs\EditableSecureString.cs" />
     <Compile Include="EditableConfigs\EditableString.cs" />
