--- a/SettingsUI/packages.config
+++ b/SettingsUI/packages.config
@@ -3,4 +3,6 @@
   <package id="Microsoft-WindowsAPICodePack-Core" version="1.1.3.3" targetFramework="net452" />
   <package id="Microsoft-WindowsAPICodePack-Shell" version="1.1.3.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="5.0.1" targetFramework="net461" />
+  <package id="PropertyTools" version="3.1.0" targetFramework="net452" />
+  <package id="PropertyTools.Wpf" version="3.1.0" targetFramework="net452" />
 </packages>
